--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start Page</title>
 
+    <link rel="stylesheet" href="scripts.js/main.js">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/resetcss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +30,7 @@
     <div class="grid container">
             <div class="greeting">
                 <!-- <img src="/3a7b4ec1e3dd8f55ba69d0f12df1748f.gif" alt=""> -->
-                <h2 id="current-time" class="current-time"></h2>
+                <h2 id="current-time" class="current-time"> hello pixelated </h2>
             </div>
             
             <a href="https://twitter.com/home" class="shortcut">
