--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <a href="https://www.instagram.com/" class="shortcut">
                 <i class="fa-brands fa-instagram"></i>
             </a>   
+            <a href="https://www.github.com/" class="shortcut">
+                <i class="fa-brands fa-github"></i>
+            </a>   
             <div class="shortcut">
             </div>
             
