--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="grid container">
             <div class="greeting">
                 <!-- <img src="/3a7b4ec1e3dd8f55ba69d0f12df1748f.gif" alt=""> -->
-                <h2 id="current-time" class="current-time"> hello pixelated </h2>
+                <h2 id="current-time" class="current-time"> hey lolo </h2>
             </div>
             
-            <a href="https://twitter.com/home" class="shortcut">
-                <i class="fa-brands fa-twitter"></i>
+            <a href="https://discord.com/" class="shortcut">
+                <i class="fa-brands fa-discord"></i>
             </a>
             <a href="https://www.youtube.com/" class="shortcut">
                 <i class="fa-brands fa-youtube"></i>
@@ -42,14 +42,23 @@
             <a href="https://mail.google.com/mail/u/0/" class="shortcut">
                 <i class="fa-solid fa-envelope"></i>
             </a>
-            <a href="https://drive.google.com/drive/u/1/my-drive" class="shortcut">
-                <i class="fa-brands fa-google-drive"></i>
+            <a href="https://twitch.tv/" class="shortcut">
+                <i class="fa-brands fa-twitch"></i>
             </a>
-            <a href="https://www.instagram.com/" class="shortcut">
-                <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.reddit.com/" class="shortcut">
+                <i class="fa-brands fa-reddit"></i>
+            </a>   
+            <a href="https://www.netflix.com/" class="shortcut mother">
+                <img src="daedbxr-d883eba4-5caa-4353-89d4-40430f12f7c8.png" class="netflix" alt="">
+            </a>   
+            <a href="https://www.pinterest.com/" class="shortcut">
+                <i class="fa-brands fa-pinterest-p"></i>
             </a>   
             <a href="https://www.github.com/" class="shortcut">
                 <i class="fa-brands fa-github"></i>
+            </a>   
+            <a href="https://goku.to/" class="shortcut">
+                <i class="fa-solid fa-heart"></i>
             </a>   
             <div class="shortcut">
             </div>
