--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 <a href="https://goku.to/" class="shortcut">
                     <i class="fa-solid fa-heart"></i>
                 </a>   
+
+                <a href="https://9animetv.to/" class="shortcut">
+                    <i class="fa-solid fa-face-smile-hearts"></i>
+                </a>   
         </div>
        
     </div>
